# wefact-mcp

./: .gitignore  CHANGELOG.md  LICENSE-COMMERCIAL.md  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_client.py  test_server.py
wefact_mcp/: client.py  server.py
